keywords: netapp, solutions, catalog, change, log
---

= NetApp Solutions Change Log
:hardbreaks:
:nofooter:
:icons: font
:linkattrs:
:table-stripes: odd
:imagesdir: ./media/

[.lead]
Recent changes to the NetApp Solutions collateral.  The most recent changes are listed first.

[width=100%,cols="2, 4, 10",grid="all"]
|===
| *Date* | *Solution Area* | *Description of change*
| 05/10/2021 | VMware Virtualization | Video: How to use vVols with NetApp and VMware Tanzu Basic, part 3
| 05/05/2021 | Enterprise Database | Added FlexPod Oracle NVA (1155) and Automation video
| 05/03/2021 | Desktop Virtualization | Added link to FlexPod Desktop Virtualization solutions
| 04/30/2021 | VMware Virtualization | Video: How to use vVols with NetApp and VMware Tanzu Basic, part 2
| 04/26/2021 | Hybrid Cloud Blogs | Added blog: Using VMware Tanzu with ONTAP to accelerate your Kubernetes journey
| 04/06/2021 | NetApp Solutions | Added "About this Repository"
| 03/31/2021 | AI Use Cases | Added TR-4886: AI Inferencing at the Edge: NetApp ONTAP with Lenovo ThinkSystem Solution Design
| 03/29/2021 | Modern Data Analytics | Added NVA-1157: Apache Spark Workload with NetApp Storage Solution
| 03/23/2021 | VMware Virtualization | Video: How to use vVols with NetApp and VMware Tanzu Basic, part 1
| 03/09/2021 | AI, DB, Data Protection | Added E-Series content; categorized AI content
| 03/04/2021 | Solution Automation | New content: getting started with NetApp solution automation
| 02/18/2021 | VMware Virtualization | Added VMware vSphere for ONTAP TR
| 02/16/2021 | AI Edge Inferencing | Added automated deployment steps
| 02/03/2021 | SAP, SAP HANA | Added landing page for all SAP and SAP HANA content
| 02/01/2021 | VDI with NetApp VDS | Added content for GPU nodes
| 01/06/2021 | NetApp AI | New solution: NetApp ONTAP AI with NVIDIA DGX A100 Systems and Mellanox Spectrum Ethernet Switches (Design and Deployment)