@@ -84,3 +84,12 @@ homepage:
         - title: Request Automation
           summary: Want to request new automation?  Fill out the request form here.
           url: https://github.com/NetAppDocs/netapp-solutions/issues/new?body=[Request%20Automation]%0d%0a%0d%0aSolution%20Name:%20%0d%0aRequest%20Title:%20%0d%0aDescription:%0d%0aSuggestions:&title=Request%20Automation%20-%20%3Crequest_title%3E
+#
+    - title: Feedback
+      links:
+        - title: Request Solution
+          summary: Looking for a solution that is not provided?  Give us an overview of the solution you are looking for and request it.
+          url: https://github.com/NetAppDocs/netapp-solutions/issues/new?body=[Request%20Solution]%0d%0a%0d%0aSolution:%20%0d%0aSolution%20Description:%20%0d%0aSuggestions:&title=Request%20Solution%20-%20%3Csolution%3E
+        - title: Provide Solution Feedback
+          summary: Have questions or comments on an existing solution?  Give us your feedback on our solution collateral.
+          url: https://github.com/NetAppDocs/netapp-solutions/issues/new?body=[Solution%20Feedback]%0d%0a%0d%0aSolution%20Name:%20%%0d%0aDFeedback:%0d%0aSuggestions:&title=Solution%20Feedback%20-%20%3Csolution_name%3E
