@@ -19,6 +19,7 @@ Recent changes to the NetApp Solutions collateral.  The most recent changes are 
 [width=100%,cols="2, 4, 10",grid="all"]
 |===
 | *Date* | *Solution Area* | *Description of change*
+| 05/17/2021 | NetApp Solutions | Added Solution Feedback tile to main page
 | 05/10/2021 | VMware Virtualization | Video: How to use vVols with NetApp and VMware Tanzu Basic, part 3
 | 05/05/2021 | Enterprise Database | Added FlexPod Oracle NVA (1155) and Automation video
 | 05/03/2021 | Desktop Virtualization | Added link to FlexPod Desktop Virtualization solutions
